--- a/index.html
+++ b/index.html
@@ -273,11 +273,8 @@
         <p class="note note--strong" data-i18n="rsvp_deadline">Merci de nous confirmer votre présence avant le 15 avril 2026.</p>
 
         <div class="form-embed card">
-          <iframe
-            title="Google Form RSVP"
-            src="https://docs.google.com/forms/d/e/XXXXXXXXXXXX/viewform?embedded=true"
-            loading="lazy"
-          ></iframe>
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeftH7HPQRPds8X91CVQYfsjBKyN8wXLHZjf1UjqmE6BIj3VQ/viewform?embedded=true" 
+          width="640" height="1039" frameborder="0" marginheight="0" marginwidth="0">Chargement…</iframe>
         </div>
       </div>
     </section>
